--- a/perfiles/AYSU.html
+++ b/perfiles/AYSU.html
@@ -277,7 +277,7 @@
                 <h1>AYSU</h1>
                 <h2>----</h2>
                 <p>Desde: 10/02/2025</p>
-                <p>...</p>
+                <p>Brillo con ternura, pero también con carácter.</p>
             </div>
         </div>
         <div class="achievements-section">
