--- a/perfiles/ChuyBc.html
+++ b/perfiles/ChuyBc.html
@@ -288,7 +288,7 @@
                 </div>
                 <div class="group-content">
                     <div class="achievement-card">
-                        <img src="img/logros/infest/Sobrevive 10 días - Bloqueado.png" alt="Logro 1">
+                        <img src="img/logros/infest/Sobrevive 10 días.png" alt="Logro 1">
                         <div class="tooltip">
                             <strong>Superviviente</strong><br>
                             Sobrevive 1 días
