--- a/perfiles/Roy.html
+++ b/perfiles/Roy.html
@@ -270,7 +270,7 @@ Somebody's ringin' the bell</p>
         </div>
         <div class="group-content">
             <div class="achievement-card">
-                <img src="img/logros/infest/Sobrevive 10 días - Bloqueado.png" alt="Logro 1">
+                <img src="img/logros/infest/Sobrevive 10 días.png" alt="Logro 1">
                 <div class="tooltip">
                     <strong>Superviviente</strong><br>
                          Sobrevive 10 días
