--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                     <div class="achievement-card">
-                        <img src="img/logros/infest/Sobrevive 15 días - Bloqueado.png" alt="Logro 2">
+                        <img src="img/logros/infest/Sobrevive 15 días.png" alt="Logro 2">
                         <div class="tooltip">
                             <strong>No es nada facil</strong><br>
                             Sobrevive 3 días
