--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -325,8 +325,8 @@
             <div class="achievement-card">
                 <img src="img/logros/infest/Oculto.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Oculto</strong><br>
-                         ???
+                    <strong>¿Bestia subterranea o marina?</strong><br>
+                         Elimina a un Gazenbreacher
                         </div>
             </div>
             <div class="achievement-card">
