--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -323,7 +323,7 @@
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Oculto.png" alt="Logro 2">
+                <img src="img/logros/infest/Elimina un Gazenbreacher.png" alt="Logro 2">
                 <div class="tooltip">
                     <strong>¿Bestia subterranea o marina?</strong><br>
                          Elimina a un Gazenbreacher
