--- a/perfiles/Draksis.html
+++ b/perfiles/Draksis.html
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                     <div class="achievement-card">
-                        <img src="img/logros/infest/Sobrevive 15 días - Bloqueado.png" alt="Logro 2">
+                        <img src="img/logros/infest/Sobrevive 15 días.png" alt="Logro 2">
                         <div class="tooltip">
                             <strong>No es nada facil</strong><br>
                             Sobrevive 3 días
@@ -323,10 +323,10 @@
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Oculto.png" alt="Logro 2">
+                <img src="img/logros/infest/Elimina un Gazenbreacher.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Oculto</strong><br>
-                         ???
+                    <strong>¿Bestia subterranea o marina?</strong><br>
+                         Elimina a un Gazenbreacher
                         </div>
             </div>
             <div class="achievement-card">
