--- a/perfiles/Roy.html
+++ b/perfiles/Roy.html
@@ -277,7 +277,7 @@ Somebody's ringin' the bell</p>
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Sobrevive 15 días - Bloqueado.png" alt="Logro 2">
+                <img src="img/logros/infest/Sobrevive 15 días.png" alt="Logro 2">
                 <div class="tooltip">
                     <strong>No es nada facil</strong><br>
                          Sobrevive 15 días
@@ -298,10 +298,10 @@ Somebody's ringin' the bell</p>
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Oculto.png" alt="Logro 2">
+                <img src="img/logros/infest/Elimina un Gazenbreacher.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Oculto</strong><br>
-                         ???
+                    <strong>¿Bestia subterranea o marina?</strong><br>
+                         Elimina a un Gazenbreacher
                         </div>
             </div>
             <div class="achievement-card">
